--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body data-page>
-  <!-- Header section-->
+  <!-- Header section
   <header class="header">
     <div class="container header__container">
       <a class="logo header__logo link" href="" lang="en">Web<span class="header__logo--accent">Studio</span></a>
@@ -47,9 +47,10 @@
       </ul>
     </div>
   </header>
+  -->
   <!-- Main section -->
   <main class="main">
-    <!-- Hirow  section -->
+    <!-- Hirow  section 
     <section class="hero section">
       <div class="container">
         <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
@@ -58,6 +59,7 @@
         </button>
       </div>
     </section>
+    -->
     <!-- Benefits section -->
     <section class="benefits section">
       <div class="container">
@@ -109,7 +111,7 @@
         </ul>
       </div>
     </section>
-    <!-- aboot section -->
+    <!-- aboot section 
     <section class="aboot section">
       <div class="container">
         <h2 class="section-title ">Чем мы занимаемся</h2>
@@ -138,7 +140,8 @@
         </ul>
       </div>
     </section>
-    <!-- team section -->
+  -->
+    <!-- team section
     <section class="team section">
       <div class="container">
         <h2 class="section-title">Наша команда</h2>
@@ -294,7 +297,8 @@
         </ul>
       </div>
     </section>
-    <!-- client section -->
+     -->
+    <!-- client section 
     <section class="client section">
       <div class="container">
         <h2 class="section-title">Постійні клієнти</h2>
@@ -344,8 +348,9 @@
         </ul>
       </div>
     </section>
+  -->
   </main>
-  <!-- Footer section -->
+  <!-- Footer section 
   <footer class="footer">
     <div class="container">
       <div class="footer-card-cet">
@@ -417,6 +422,7 @@
       </div>
     </div>
   </footer>
+  -->
   <!--modal window !-->
   <div class="backdrop is-hidden" data-modal>
     <div class="modal">
