--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   -->
     <!-- Main section -->
     <main class="main">
-      <!-- Hirow  section 
+      <!-- Hirow  section  -->
     <section class="hero section">
       <div class="container">
         <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
@@ -61,7 +61,7 @@
         </button>
       </div>
     </section>
-    -->
+   
       <!-- Benefits section -->
       <section class="benefits section">
         <div class="container">
