--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <li class="aboot__item">
             <div class="aboot__img-set">
               <picture>
-                <source media="(min-width: 1200)" srcset="
+                <source media="(min-width: 1200px)" srcset="
                 ./imeges/abult/abult-1@1x_d.jpg 1x, 
                 ./imeges/abult/abult-1@2x_d.jpg 2x "
                 />
@@ -141,7 +141,7 @@
           <li class="aboot__item">
             <div class="aboot__img-set">
               <picture>
-                <source media="(min-width: 1200)" srcset="
+                <source media="(min-width: 1200px)" srcset="
                 ./imeges/abult/abult-2@1x_d.jpg 1x, 
                 ./imeges/abult/abult-2@2x_d.jpg 2x "
                 />
@@ -154,7 +154,7 @@
           <li class="aboot__item">
             <div class="aboot__img-set">
               <picture>
-                <source media="(min-width: 1200)" srcset="
+                <source media="(min-width: 1200px)" srcset="
                 ./imeges/abult/abult-3@1x_d.jpg 1x, 
                 ./imeges/abult/abult-3@2x_d.jpg 2x "
                 />
