--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a class="logo header__logo link" href="" lang="en">Web<span class="header__logo--accent">Studio</span></a>
       <button class="mob-menu__btg" type="button" data-menu-open>
         <svg class="mob-menu__icon" width="24px" height="16px">
-          <use href="/imeges/icomoon.svg#mob-menu"></use>
+          <use href="./imeges/icomoon.svg#mob-menu"></use>
         </svg>
       </button>
       <nav class="nav">
@@ -571,7 +571,7 @@
       </button>
       <ul class="mob-nav__list mob__card-set list">
         <li class="mob-nav__item">
-          <a class="mob-nav__link link" href="./index.html">Студія</a>
+          <a class="mob-nav__link mob-nav__link--akcent link" href="./index.html">Студія</a>
         </li>
         <li class="mob-nav__item">
           <a class="mob-nav__link link" href="./portfolio.html">Портфоліо</a>
