--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
       <a class="logo header__logo link" href="" lang="en">Web<span class="header__logo--accent">Studio</span></a>
       <button class="mob-menu__btg" type="button" data-menu-open>
         <svg class="mob-menu__icon" width="24px" height="16px">
-          <use href="/imeges/icomoon.svg#mob-menu"></use>
+          <use href="./imeges/icomoon.svg#mob-menu"></use>
         </svg>
       </button>
       <nav class="nav">
@@ -395,20 +395,20 @@
           <address class="footer-address">
             <ul class="footer_list list">
               <li class="footer__kontakt-item">
-                <a class="footer__kontakt-item__link link" href="https://goo.gl/maps/461k6AUFMQKHegbq6" target="_blank"
+                <a class="footer__kontakt-link link" href="https://goo.gl/maps/461k6AUFMQKHegbq6" target="_blank"
                   rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
               </li>
               <li class="footer__kontakt-item">
-                <a class="footer__kontakt-item__link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="footer__kontakt-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
               </li>
               <li class="footer__kontakt-item">
-                <a class="footer__kontakt-item__link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="footer__kontakt-link link" href="tel:+380961111111">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
         <div class="footer__social">
-          <p class="footer-title ">приєднуйтесь</p>
+          <p class="footer-title footer__social-title">приєднуйтесь</p>
           <ul class="social__list list">
             <li class="social__item">
               <a class="social__link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram">
@@ -426,14 +426,14 @@
             </li>
             <li class="social__item">
               <a class="social__link link" href="" target="_blank" rel="noopener noreferrer" aria-label="facebook">
-                <svg class="footer__social-icon " width="20px" height="20px">
+                <svg class="footer__social-icon" width="20px" height="20px">
                   <use href="./imeges/icomoon.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link link" href="" target="_blank" rel="noopener noreferrer" aria-label="linkedin">
-                <svg class="footer__social-icon " width="20" height="20">
+                <svg class="footer__social-icon" width="20" height="20">
                   <use href="./imeges/icomoon.svg#linkedin"></use>
                 </svg>
               </a>
@@ -442,7 +442,7 @@
         </div>
         <div class="footer-form">
           <form class="footer_form">
-            <strong class="footer-title ">Підпишіться на розсилку</strong>
+            <strong class="footer-title">Підпишіться на розсилку</strong>
             <div class="fooer-form__set">
               <input class="fooer-form__input" type="email" id="footer-user-email" placeholder="E-mail" />
 
@@ -463,7 +463,7 @@
     <div class="menu-container">
       <button class="menu-of__btg mob-menu__btg" type="button" data-menu-close>
         <svg class="menu-of__icon" width="24px" height="24px">
-          <use href="/imeges/icomoon.svg#icon-close"></use>
+          <use href="./imeges/icomoon.svg#icon-close"></use>
         </svg>
       </button>
       <ul class="mob-nav__list mob__card-set list">
@@ -471,7 +471,7 @@
           <a class="mob-nav__link link" href="./index.html">Студія</a>
         </li>
         <li class="mob-nav__item">
-          <a class="mob-nav__link link" href="./portfolio.html">Портфоліо</a>
+          <a class="mob-nav__link mob-nav__link--akcent link" href="./portfolio.html">Портфоліо</a>
         </li>
         <li class="mob-nav__item">
           <a class="mob-nav__link link" href="">Контакти</a>
